fix single alignment to center

--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: purple;
   background: url('../images/bg/2.jpg') no-repeat center center fixed;
-  
+              display: flex;
+            flex-direction: column;
+            align-items: center;
 }
 
 .topnav {
